<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.tedmobchallenge.screens.detail.ProductDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/product_detail_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/product_detail_title"
            tools:text="Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops"
            app:productImage="@{viewModel.selectedProduct.image}"
            tools:src="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/product_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/title"
            android:layout_marginTop="16dp"
            app:productDetailTitle="@{viewModel.selectedProduct.title}"
            app:layout_constraintTop_toBottomOf="@id/product_detail_image"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/product_detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_detail_title"
            app:productDetailPrice="@{viewModel.selectedProduct.price}"
            tools:text="@string/price" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/product_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_detail_price"
            app:productDetailDescription="@{viewModel.selectedProduct.description}"
            tools:text="@string/description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/product_detail_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:productDetailCategory="@{viewModel.selectedProduct.category}"
            tools:text="@string/category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_detail_description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>